--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Memory</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -27,18 +28,31 @@
     </div>
 
   </div>
-  <div id="screen_game" class="game_child_container hide"> 
+  <div id="screen_game" class="hide">
+  
+  <div class="container_game_info">
+    <p id="points" class="game_info">Points: 0</p>
+    <p id="moves" class="game_info">Moves: 0</p>
+  </div>
+  
+  <div class="game_child_container"> 
     <ul id="game_board" class="memory_cards_container">
     </ul>
-    <p id="tip_message"></p>
   </div>
+  <p id="tip" class="tip_message"></p>
+</div>
+
   <div id="screen_results" class="container_centered hide">
     <p>you won/  your points </p>
     <div class="play_again">play again?</div>
   </div>
 </div>
 <script src="js/jquery.min.js"></script>
+<script src="js/jquery-ui.min.js"></script>
+<script src="js/symbols.js"></script>
+<script src="js/memory.js"></script>
 <script src="js/game.js"></script>
+
 <footer></footer>
 </body>
 </html>
