--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html >
 <head>
 	<meta charset="utf-8">
-  	<meta http-equiv="x-ua-compatible" content="ie=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css"> 
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <script src="js/jquery.min.js"></script>
+  </head>
 <body class="game game_backgrounds">
 <div class="game_parent_container">
   <div id="screen_welcome" class="screen container_centered" >
@@ -97,7 +97,6 @@
       <p class="copyrights">by e.kagan, be creative</p>
 </footer>
 </body>
-<script src="js/jquery.min.js"></script>
 <script src="js/symbols.js"></script>
 <script src="js/memory.js"></script>
 <script src="js/game.js"></script>
