Feature - Timer added.
Added timer.
Documentation changed.
Minor upgrades.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Gameboard screen -->
     <div id="screen_game" class="screen hide">
       <div class="container_game_info">
-        <p id="points" class="game_info">Points: 0</p>
+        <p id="timer" class="game_info">Time: 0:00:00</p>
         <p class="reset_game fa fa-refresh"></p>
         <p id="moves" class="game_info">Moves: 0</p>
       </div>
