Feature - star rating during the gameplay
Add element to display star rating.
Refactor the function that changes the star elements class.
Add CSS.
Correct the documentation.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
         <ul id="game_board" class="memory_cards_container">
         </ul>
       </div>
-      <p id="tip" class="tip_message"></p>
+      <div class="feedback">
+        <div class="tip_container"> 
+          <p id="tip" class="tip_message"></p>
+        </div>
+        <ul class="stars_container_small">
+          <li class="stars_small fa-star"></li>
+          <li class="stars_small fa-star"></li>
+          <li class="stars_small fa-star"></li>
+          <li class="stars_small fa-star"></li>
+          <li class="stars_small fa-star"></li>
+        </ul>
+      </div>
     </div>
     <!-- Results screen -->
     <div id="screen_results" class="screen container_centered container-padded hide">
